tests/phase4/testpap.asc
/*
a = 1 + 2 ;
b= "MALAKAS";
c= print();
if(a);
if(x<100 or x>200 and not false);
function test(a,b,c,d){return a+b;}
*/
x=10;
    {
        local x = 30;
        {
            ::x=20; //error
            //x=20;
            {
                local x = 20;
                x=3;
            }
            x = y = z = 40;
            local x = 50;
        }
    }
x=60;